fix(Header): hamburger menu on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   background-image: url(./assets/fanzone-bg.png);
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 
 /* .App::before {
